--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   background: #151515 url("../images/bkg.png") 0 0;
-  color: #eae9e9;
-  font: 16px;
+  color: #fff5ee;
+  font: 14px;
   line-height: 1.5;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
