--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #151515 url("../images/bkg.png") 0 0;
-  color: #eae9e9;
+  background: #151515 url("../images/bkg1.png") 0 0;
+  color: #faf0e6;
   font: 14px;
   line-height: 1.5;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
