--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -532,7 +532,7 @@ body {
   padding: 0px 0 20px 0px;
   margin: 0px;
   font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #ffebcd;
+  color: #f0f8ff;
   font-weight: normal;
   background: #343434;
   background-attachment: fixed !important;
@@ -546,12 +546,13 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #e8e8e8;
-  margin: 0 0 10px;
+  margin: 0 0 12px;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
 
 p, ul, ol, table, pre, dl {
+  color: #e86100;
   margin: 0 0 20px;
 }
 
